Issue #9125:  Update parser module for "except ... as ..." syntax.